app/assets/stylesheets/application.scss
// Custom bootstrap variables must be set or imported *before* bootstrap.
@import "bootstrap";
$main-text: #fff;
$dark-text: #111;
$dark-text-hover: #444;
$main-text-hover: #bbb;
$main-background: #000;
$active-text: #888;

body{
  font-family: 'Lato', sans-serif;
  background-color: $main-background;
  color: $main-text;
}
nav{
  .navbar-nav{
    margin: 0 auto;
  }

  .nav-item a {
    color: $main-text !important;
    font-size: 1.5em;
    margin: auto 20px;
  }
  
  .nav-item a:hover{
    color: $main-text-hover !important;
  }
  
  .nav-item.active a{
    color: $active-text !important;
  }

  .nav-item.active a:hover{
    color: $main-text-hover !important;
  }
  
  .navbar-brand{
    color: $main-text !important;
    font-size: 3em;
  }
  
  .navbar-brand:hover{
    color: $main-text-hover !important;
  }
  
}

#nav-hr{
  margin: 0 2.5vw;
  margin-top: 20px;
  height: 3px;
  background-color: $main-text;
}

nav.bg-dark{
  background-color: $main-background !important;
}

.admin-message {
  background-color: #090;
  text-align: center;
}

.portfolio-card{
  background-color: $main-background;
}
.portfolio-card h1,
.portfolio-card p,
.portfolio-card h3{
  color: $main-text;
}

.jumbotron{
  background-color: $main-background;
}

.contact-links a{
  color: $dark-text;
  font-size: 3em;
}

.contact-links a:hover{
  background-color: darken($main-text, 10%);
  text-decoration: none;
}

.portfolio-img{
  height: 100%;
}

.card{
  color: $dark-text;
}

.show-btn{
  margin-top: 1em;
}

.new-btn{
  margin-bottom: 1em;
}

.home-img{
  float: center;
  width: 50%;
}

.img-container{
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-btn{
  margin-top: 1em;
  width: 50%;
}

